# statsboards-backend

./: .coveragerc  .dockerignore  .env.example  .env.test  .gitignore  =4.2.0rc1  AGENTS.md  ARCHITECTURE.md  CONFIGURATION_VALIDATION.md  DEVELOPMENT_GUIDELINES.md  DOCKER_SECURITY_PLAN.md  Dockerfile  Dockerfile.certbot  Dockerfile.dev  Dockerfile.migrations  Dockerfile.nginx  Dockerfile.nginx.init  Dockerfile.nginx.static  Dockerfile.prod  Dockerfile.test  EXCEPTION_HANDLING_REFACTOR.md  IMPLEMENTATION_SUMMARY.md  PG_TRGM_PATTERN.md  PG_TRGM_SEARCH_OPTIMIZATION.md  PHASE1_COMPLETE_EXCEPTION_HANDLING.md  PHASE2_COMPLETE_EXCEPTION_HANDLING.md  PHASE3_COMPLETE_EXCEPTION_HANDLING.md  README.md  REFACTORING_PLAN_EXCEPTION_HANDLING.md  ROUTER_REGISTRY.md  SECURITY.md  SERVICE_LAYER_DECOUPLING.md  SSL_REFACTORING.md  SWALLOWED_EXCEPTIONS_FIX_PROGRESS.md  TEST_COVERAGE_PLAN.md  TEST_REALTIME_UPDATES.md  alembic.ini  certbot-entrypoint.sh  default.nginx.conf  delete_cyrillic_duplicates.py  (+19 more)
.github/workflows/: build-and-test.yml  cleanup.yml  deploy.yml  docker-push.yml  main.yml
alembic/: env.py
alembic/versions/: 2023_12_05_1659-35f355f16c6b_create_seasons_table.py  2023_12_05_1718-1c58f1c54b5e_create_tournaments_table.py  2023_12_05_1939-72173ccb0597_create_one_to_many_tournaments_table.py  2023_12_05_1953-65018504121d_create_one_to_many_tournaments_table.py  2023_12_05_2037-912aa2bd784a_create_one_to_many_tournaments_table.py  2023_12_05_2038-c5327b7d034d_create_one_to_many_tournaments_table.py  2023_12_06_1312-a18973f3d92c_create_teams_table.py  2023_12_06_1346-f3fb2ee4db22_create_teams_table.py  2023_12_09_1048-7b7ede01e131_create_teams_tournament_table_refactor.py  2023_12_10_1736-6ae0f074ec19_create_matches_table.py  2023_12_10_1808-74d590a27d8c_create_matches_table.py  2023_12_10_1809-87bb70e9bbb1_create_matches_table.py  2023_12_11_1046-14ca3c12162d_create_matchdata_table.py  2023_12_11_1130-9fb276fd4ad8_update_match_and_matchdata_table.py  2023_12_11_1137-afc32b7fa451_update_match_and_matchdata_table.py  2023_12_18_1708-fab5220e5abc_matchdata_refactor.py  (+132 more)
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CLOCK_HANDLING.md  COMBINED_SCHEMAS.md  CONFIGURATION_VALIDATION.md  DATABASE_MIGRATION_ANTI_PATTERNS.md  DEVELOPMENT_GUIDELINES.md  FRONTEND_VERIFICATION_PARTIAL_UPDATES.md  PG_TRGM_SEARCH_OPTIMIZATION.md  ROUTER_REGISTRY.md  SCHEMA_STANDARDIZATION_PLAN.md  SERVICE_LAYER_DECOUPLING.md  WEBSOCKET_DATA_FLOW.md
src/: logging-config.yaml  logging-config_dev.yaml  logging-config_info.yaml  logging_config.py  main.py  run_prod_server.py  runserver.py
static/: somefile.txt
tests/: conftest.py  factories.py  fixtures.py  test_base_router.py  test_benchmarks.py  test_clock_orchestrator.py  test_config.py  test_data.py  test_database_connection_validation.py  test_db_session_manager.py  test_decorators.py  test_download_service.py  test_e2e.py  test_error_handlers.py  test_exception_handler.py  test_exception_handlers.py  test_exceptions.py  test_feature_capability_enforcement.py  test_fetch_helpers.py  test_file_service.py  test_file_system_service.py  test_gameclock_clock_manager.py  test_health.py  test_image_processing_service.py  test_main.py  test_match_parser.py  test_model_validate.py  test_pars_all_players.py  test_pars_integration.py  test_pars_player_team_tournament.py  test_pars_season.py  test_pars_tournament.py  test_photo_utils.py  test_playclock_clock_manager.py  test_playclock_clock_state_machine.py  test_player_match_views_helpers.py  test_player_team_tournament_search.py  test_property_based.py  test_proxy_manager.py  test_proxy_manager_with_sources.py  (+15 more)
(+385 files in other folders)
